# silkNet

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: convert_videos_to_h265.sh
silknet/: __init__.py  config.py  dataset.py  features.py  plots.py
silknet/modeling/: earlyStopping.py  early_stopping.py  loss.py  models.py  predict.py  train.py  train_loader.py  transforms.py
