[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "silknet"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Gabriel Cesar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "torch",
    "torchvision",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pillow",
    "grad-cam",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["silknet"]
include = ["pyproject.toml", "silknet/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["silknet"]
force-sort-within-sections = true

